separate messages friend and user

--- a/src/messenger-app/messenger-room.html
+++ b/src/messenger-app/messenger-room.html
@@ -51,7 +51,7 @@
       <div class="layout horizontal">
         <div class="flex-auto" id="messages">
           <!-- Mensajes -->
-          <messenger-messages roomkey="{{routeData.roomkey}}"></messenger-messages>
+          <messenger-messages uid="{{currentuser.uid}}" roomkey="{{routeData.roomkey}}"></messenger-messages>
         </div>
         <div class="flex-auto avatar">
           <!-- Avatar -->
