--- a/src/messenger-elements/messenger-user.html
+++ b/src/messenger-elements/messenger-user.html
@@ -21,7 +21,7 @@
         }
       },
 
-      ready: function() {
+      attached: function() {
         if (this.uid) this.findUser();
       },
 
